dark mode possible fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -12,6 +12,7 @@
 html {
     max-width: 100vw;
     overflow-x: hidden;
+    background-color: white !important;
 }
 
 body {
